--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^4.12.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.3",
